fix - cover-text was spelled wrong so cover text was not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,11 +85,11 @@ ul {
     position: relative;
 }
 
-.covertext, .covertext h2 {
+.cover-text, .cover-text h2 {
     color: #071108;
 }
 
-.covertext h3 {
+.cover-text h3 {
     text-align: left;
     font-size: 90%;
 }
@@ -100,7 +100,7 @@ ul {
     background: url(../images/hero-image.jpg) no-repeat center center;
 }
 
-.covertext {
+.cover-text {
     font-size: 100%;
     font-family: 'Quicksand', sans-serif;
     letter-spacing: 2px;
@@ -108,7 +108,7 @@ ul {
     width: 300px;
     height: 200px;
 
-    padding-top: 40px;
+    padding-top: 20px;
     padding-left: 10px;
 
     background-color: rgba(243,117,43, .8);
